sass/global.scss
* {
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}

html {
  font-size: 62.5%;
}

html, body {
  max-width: 100%;
  overflow-x: hidden;
}

h1 {
  font-size: 3rem;
  margin-bottom: $normal-space;
}

h2 {
  font-size: 3.2rem;
  margin-bottom: $normal-space;
}

h3 {
  font-size: 2rem;
  margin-bottom: $normal-space;
}

h4 {
  font-size: 2.5rem;
  margin-bottom: $normal-space;
}

p {
  line-height: 1.5;
  font-size: 1.6rem;
  margin-bottom: $normal-space;
}

button {
  min-height: 5rem;
  padding: $small-space 5rem;
  font-size: 1.4rem;
  background-color: rgba(0,0,0,0);
  border: 1px solid black;
  margin-bottom: $normal-space;

  &.btn-primary {
    border: none;
    background-color: $tipsease-green;
    color: white;
  }
}

.full-width {
  width: 100%;
}

.row {
  width: 100%;

  & > * {
    // allows full width children
    max-width: 88%;
  }

  .full-width {
    max-width: 100%;
  }

  &.padding-sides {
    padding: 0 4%;
  }
}

.main-content-container {
  padding-top: 7rem;
}

section {
  @include flexbox(column, null, center);

  h1, h2, h3, h4, h5, h6 {
    display: block;
    width: 100%;
  }
}

